添加哈希表
Signed-off-by: w199753 <1360689012@qq.com>

--- a/DataStructural/DataStructural.csproj
+++ b/DataStructural/DataStructural.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="DoubleLinkedList.cs" />
     <Compile Include="MaxHeap.cs" />
+    <Compile Include="MyHashTable.cs" />
     <Compile Include="MyLinkedList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
