--- a/DataStructural/DataStructural.csproj
+++ b/DataStructural/DataStructural.csproj
@@ -48,6 +48,7 @@
     <Compile Include="MaxHeap.cs" />
     <Compile Include="MyHashTable.cs" />
     <Compile Include="MyLinkedList.cs" />
+    <Compile Include="OneWayCircularLinkedList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MyStack.cs" />
